# landbruget.dk

./: .gitignore  README.md  commit_history.txt  pyrightconfig.json
.github/workflows/: bmd_monthly.yml  chr-pipeline.yml  deploy-edge-function.yml  deploy-sync-jobs.yml  dmi_pipeline.yml  svineflytning_pipeline.yml  sync-gcs.yml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.processing  Dockerfile.sync  README.md  cloudbuild.yaml  conftest.py  requirements.txt  sync_app.py
backend/.github/workflows/: deploy-sync-jobs.yml
backend/api/: config.toml  config.yaml  import_map.json  index.ts  populating_mock_data.md
backend/api/supabase/: config.toml
backend/api/supabase/functions/api/: config.yaml  index.ts
backend/api/supabase/migrations/: 20250503121656_remote_schema.sql  20250503125949_add_company_id_to_field_yearly_data_fix.sql  add_fertilizer_amount_to_field_yearly_data.sql
backend/dataflow/: setup.py  validate_cadastral.py  validate_water_projects.py  validate_wetlands.py
backend/pipelines/: .env.example  README.md  migrate_secrets_to_env.py
backend/pipelines/base/: Dockerfile
backend/pipelines/bmd_scraper/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/pipelines/bmd_scraper/bronze/: __init__.py  export.py
backend/pipelines/bmd_scraper/silver/: __init__.py  transform.py
backend/pipelines/cadastral_parcels/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/pipelines/cadastral_parcels/bronze/: __init__.py
backend/pipelines/cadastral_parcels/silver/: __init__.py  transform.py
backend/pipelines/cadastral_parcels/tests/: __init__.py  conftest.py
backend/pipelines/cadastral_parcels/tests/bronze/: __init__.py  test_parsing.py
backend/pipelines/cadastral_parcels/tests/silver/: __init__.py  test_transform.py
backend/pipelines/chr_pipeline/: .env.example  Dockerfile  README.md  debug_paths.py  docker-compose.yml  main.py  pyproject.toml  run_pipeline.sh  test_paths.py
backend/pipelines/chr_pipeline/bronze/: export.py  load_besaetning.py  load_diko.py  load_ejendom.py  load_stamdata.py  load_vetstat.py
backend/pipelines/chr_pipeline/silver/: animal_movements.py  antibiotic_usage.py  chr_silver_processing.py  config.py  export.py  helpers.py  herd_sizes.py  herds.py  parse_vetstat_xml.py  processingbronzedata.md  properties.py  property_vet_events.py  vet_practices.py
backend/pipelines/dmi_pipeline/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/pipelines/dmi_pipeline/bronze/: extract.py
backend/pipelines/dmi_pipeline/silver/: load.py  transform.py
backend/pipelines/svineflytning_pipeline/: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/pipelines/svineflytning_pipeline/bronze/: export.py  load_svineflytning.py
backend/pipelines/unified_pipeline/: Makefile  pyproject.toml
backend/pipelines/unified_pipeline/src/tests/bronze/: test_bnbo_status.py
backend/pipelines/unified_pipeline/src/tests/silver/: test_bnbo_status.py
backend/pipelines/unified_pipeline/src/unified_pipeline/: __main__.py  app.py
backend/pipelines/unified_pipeline/src/unified_pipeline/bronze/: base.py  bnbo_status.py
backend/pipelines/unified_pipeline/src/unified_pipeline/common/: base.py
backend/pipelines/unified_pipeline/src/unified_pipeline/model/: app_config.py  base_config.py  bnbo_status.py  cli.py
backend/pipelines/unified_pipeline/src/unified_pipeline/silver/: bnbo_status.py
backend/pipelines/unified_pipeline/src/unified_pipeline/util/: gcs_util.py  geometry_validator.py  log_util.py
backend/scripts/: load_property_owners_to_bq.py  sync_agricultural_fields.py  sync_chr_data.py  sync_wetlands.py  test_cadastral.py  test_herd_data.py  test_vetstat.py
backend/scripts[legacy]/: sync_bnbo_status.py  sync_cadastral.py  sync_crops.py  sync_herd_data.py  sync_property_owners.py  sync_water_projects.py
backend/src/: base.py  config.py  main.py
backend/src/sources/: base.py
backend/src/sources/parsers/: __init__.py  agricultural_fields.py  antibiotics.py  cadastral.py  chr_data.py  chr_species.py  herd_data.py  property_owners.py  water_projects.py  wetlands.py
backend/src/sources/static/animal_welfare/: Dyrevelfaerd_tilsyn_rapport.xlsx
backend/src/sources/static/biogas/: Biogas_stoette_2023.xlsx
backend/src/sources/static/crops/: parser.py
backend/src/sources/static/fertilizer/: Efterafgrøder 2020.xlsx  readme.md
backend/src/sources/static/pesticides/: parser.py
backend/src/sources/static/slaughter_premiums/: parser.py
backend/src/sources/static/subsidies/: readme.me
backend/src/sources/utils/: geometry_validator.py
backend/src[legacy]/sources/: base.py
backend/src[legacy]/sources/parsers/: bnbo_status.py  water_projects.py  wetlands.py
backend/src[legacy]/sources/static/animal_welfare/: Dyrevelfaerd_indsatsomraader.xlsx
backend/src[legacy]/sources/static/biogas/: Biogas_produktion_2023.xlsx
backend/src[legacy]/sources/static/fertilizer/: Efterafgrøder 2021.xlsx  Efterafgrøder 2022.xlsx  Efterafgrøder 2023.xlsx
backend/src[legacy]/sources/static/pesticides/: README.md
backend/src[legacy]/sources/static/slaughter_premiums/: SLP_2019_2023_ubetalt.xlsx
backend/src[legacy]/sources/static/subsidies/: Deminimis_stoette.xlsx  Nationale_midler_GUDP_Plantefonden.xlsx  Projekttilskud_data.xlsx
backend/src[legacy]/sources/static/wetlands/: parser.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/hooks/: useMapData.ts
frontend/src/types/: sources.ts
