[project]
name = "chr-pipeline"
version = "0.1.0"
description = "Bronze layer pipeline for fetching CHR data."
readme = "README.md" 
requires-python = ">=3.11" 
license = { text = "MIT" } 
authors = [
    { name = "Your Name", email = "your@email.com" },
]
dependencies = [
    "zeep~=4.3.1",
    "certifi~=2024.12.14",
    "google-cloud-secret-manager~=2.22.1",
    "lxml",
    "xmlsec==1.3.14",
    "google-cloud-storage~=2.19.0",
    "python-dotenv~=1.0.1",
    "cryptography",
    "tqdm~=4.66.2",
    "pandas>=2.2.0",
    "geopandas>=0.14.0",
    "pyarrow>=16.1.0",  
    'ibis-framework[duckdb,geospatial]>=10.5.0',
    "lxml>=5.3.0",
    "gcsfs>=2024.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "bronze", "silver"] 
include = ["README.md", "*.py"] 

[tool.hatch.build]
only-packages = true
artifacts = ["*.py"]

[tool.uv]
