[project]
name = "dmi_pipeline"
version = "0.1.0"
description = "Pipeline for processing DMI climate data"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "duckdb>=0.9.0",
    "geopandas>=0.14.0",
    "pandas>=2.1.0",
    "fastapi>=0.104.0",
    "pyarrow>=14.0.0",
    "tqdm>=4.66.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bronze", "silver"]